--- a/index.html
+++ b/index.html
@@ -2,20 +2,46 @@
 <html lang="fr">
 <head>
 <meta charset="UTF-8">
-<title>Fusée du GOAT</title>
+<title>Fusée Infinity</title>
 
 <meta name="viewport"
 content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 <style>
-body{margin:0;background:black;color:white;font-family:Arial, sans-serif;overflow:hidden}
-.screen{position:absolute;inset:0;display:none;flex-direction:column;align-items:center;justify-content:center;gap:20px}
+*{box-sizing:border-box}
+body{
+    margin:0;
+    background:black;
+    color:white;
+    font-family:Arial,sans-serif;
+    overflow:hidden;
+    touch-action:none;
+}
+.screen{
+    position:absolute;
+    inset:0;
+    display:none;
+    flex-direction:column;
+    align-items:center;
+    justify-content:center;
+    gap:20px
+}
 .active{display:flex}
 
 /* ===== ACCUEIL ===== */
-#home-screen{background:url("rocket-bg.jpg") center/cover}
-#title{font-size:42px;text-shadow:0 0 10px white}
-input,button{padding:12px 20px;font-size:18px;border-radius:10px;border:none}
+#home-screen{
+    background:
+        linear-gradient(to top, rgba(0,0,0,.65), rgba(0,0,0,.2)),
+        url("https://images.unsplash.com/photo-1446776811953-b23d57bd21aa?auto=format&fit=crop&w=1600&q=80")
+        center/cover no-repeat;
+}
+#title{font-size:42px;text-shadow:0 0 15px white}
+input,button{
+    padding:12px 20px;
+    font-size:18px;
+    border-radius:10px;
+    border:none
+}
 button{background:#2196f3;color:white;cursor:pointer}
 #best{position:absolute;bottom:20px;left:20px}
 
@@ -27,7 +53,13 @@ button{background:#2196f3;color:white;cursor:pointer}
 #leader-title{font-size:36px;text-shadow:0 0 10px gold}
 #leader-sub{opacity:.8}
 #leaderboard-list{width:320px}
-.item{display:flex;justify-content:space-between;padding:10px;margin:6px 0;border-radius:12px}
+.item{
+    display:flex;
+    justify-content:space-between;
+    padding:10px;
+    margin:6px 0;
+    border-radius:12px
+}
 .gold{background:linear-gradient(90deg,#ffd700,#ffb300);color:black}
 .silver{background:linear-gradient(90deg,#cfd8dc,#b0bec5);color:black}
 .bronze{background:linear-gradient(90deg,#cd7f32,#a97142);color:black}
@@ -41,17 +73,21 @@ button{background:#2196f3;color:white;cursor:pointer}
 .rocket{
     position:absolute;
     bottom:60px;
-    left:50%;
-    transform:translateX(-50%);
-    width:40px;height:80px;
-    z-index:3
+    width:40px;
+    height:80px;
+    z-index:3;
 }
-.body{width:40px;height:55px;background:#d32f2f;border-radius:10px}
 .nose{
     width:0;height:0;
     border-left:20px solid transparent;
     border-right:20px solid transparent;
-    border-bottom:25px solid #b71c1c
+    border-bottom:25px solid #b71c1c;
+}
+.body{
+    width:40px;
+    height:55px;
+    background:#d32f2f;
+    border-radius:10px;
 }
 .wing{
     position:absolute;
@@ -66,10 +102,12 @@ button{background:#2196f3;color:white;cursor:pointer}
     height:18px;
     background:orange;
     margin:0 auto;
-    display:block;
-    animation:flame .2s infinite alternate
+    animation:flame .2s infinite alternate;
 }
-@keyframes flame{to{height:22px;background:yellow}}
+@keyframes flame{
+    from{height:14px}
+    to{height:22px;background:yellow}
+}
 
 .rock{
     position:absolute;
@@ -78,7 +116,13 @@ button{background:#2196f3;color:white;cursor:pointer}
     border-radius:50%;
     z-index:2
 }
-#score{position:absolute;top:10px;left:10px;font-size:22px;z-index:5}
+#score{
+    position:absolute;
+    top:10px;
+    left:10px;
+    font-size:22px;
+    z-index:5
+}
 
 /* GAME OVER */
 #gameover{
@@ -101,15 +145,14 @@ button{background:#2196f3;color:white;cursor:pointer}
     display:flex;
     justify-content:space-between;
     padding:0 20px;
-    z-index:20;
-    touch-action:none
+    z-index:20
 }
 #mobile-controls button{
     width:80px;height:80px;
     font-size:32px;
     border-radius:50%;
     background:rgba(255,255,255,.2);
-    color:white
+    color:white;
 }
 </style>
 </head>
@@ -158,18 +201,6 @@ button{background:#2196f3;color:white;cursor:pointer}
 </div>
 
 <script>
-/* ANTI ZOOM */
-document.addEventListener("touchstart",e=>{
-    if(e.touches.length>1)e.preventDefault()
-},{passive:false})
-
-let lastTouch=0
-document.addEventListener("touchend",e=>{
-    let now=Date.now()
-    if(now-lastTouch<300)e.preventDefault()
-    lastTouch=now
-},{passive:false})
-
 const home=document.getElementById("home-screen")
 const game=document.getElementById("game-screen")
 const leader=document.getElementById("leaderboard-screen")
@@ -181,71 +212,84 @@ const gameover=document.getElementById("gameover")
 const finalScore=document.getElementById("finalScore")
 const pseudoInput=document.getElementById("pseudo")
 
-let x=innerWidth/2,score=0,speed=4,spawnDelay=800,gameOver=false,player=""
-let baseSpeed=4,speedMultiplier=1,pointMultiplier=1,activatedThresholds=new Set(),scoreInterval
+let x=innerWidth/2-20
+let score=0,speed=4,spawnDelay=800,gameOver=false,player=""
+let scoreInterval
 
 function switchScreen(s){
     [home,game,leader].forEach(e=>e.classList.remove("active"))
     s.classList.add("active")
 }
 
+function updateBest(){
+    bestTxt.textContent="Meilleur score : "+(localStorage.getItem("bestScore")||0)
+}
+updateBest()
+
+function spawnStars(){
+    document.querySelectorAll(".star").forEach(s=>s.remove())
+    for(let i=0;i<100;i++){
+        let s=document.createElement("div")
+        s.className="star"
+        s.style.left=Math.random()*innerWidth+"px"
+        s.style.top=Math.random()*innerHeight+"px"
+        game.appendChild(s)
+        setInterval(()=>{
+            if(gameOver)return
+            s.style.top=(parseInt(s.style.top)+2)%innerHeight+"px"
+        },60)
+    }
+}
+
 function play(){
     player=pseudoInput.value||"Anonyme"
-    score=0;speed=4;spawnDelay=800;gameOver=false
-    speedMultiplier=1;pointMultiplier=1;activatedThresholds.clear()
+    score=0
+    speed=4
+    spawnDelay=800
+    gameOver=false
+    x=innerWidth/2-20
+    rocket.style.left=x+"px"
     scoreTxt.textContent="Score : 0"
     gameover.style.display="none"
     document.querySelectorAll(".rock").forEach(r=>r.remove())
+    spawnStars()
     switchScreen(game)
     loopScore()
     spawnRock()
 }
 
-/* SCORE */
 function loopScore(){
     clearInterval(scoreInterval)
     scoreInterval=setInterval(()=>{
         if(gameOver)return
-        score+=pointMultiplier
+        score++
         scoreTxt.textContent="Score : "+score
-        let thresholds=[100,250,500,1000]
-        if(score>=1500){
-            let extra=Math.floor((score-1500)/500)
-            for(let i=0;i<=extra;i++)thresholds.push(1500+i*500)
-        }
-        thresholds.forEach(t=>{
-            if(score>=t&&!activatedThresholds.has(t)){
-                activatedThresholds.add(t)
-                speedMultiplier*=2
-                pointMultiplier*=2
-                speed=baseSpeed*speedMultiplier
-                spawnDelay=Math.max(100,800/speedMultiplier)
-            }
-        })
-    },250)
+    },200)
 }
 
-/* CLASSEMENT */
-function showLeaderboard(){
-    list.innerHTML=""
-    let data=JSON.parse(localStorage.getItem("leaderboard")||"[]")
-    for(let i=0;i<10;i++){
-        let d=document.createElement("div")
-        if(data[i]){
-            let cls=i==0?"gold":i==1?"silver":i==2?"bronze":"normal"
-            let medal=i==0?"🥇":i==1?"🥈":i==2?"🥉":"#"+(i+1)
-            d.className="item "+cls
-            d.innerHTML=`<span>${medal} ${data[i].name}</span><span>${data[i].score}</span>`
-        }else{
-            d.className="item empty"
-            d.innerHTML=`<span>#${i+1} — Libre</span><span>—</span>`
-        }
-        list.appendChild(d)
-    }
-    switchScreen(leader)
-}
+/* CLAVIER PC */
+document.addEventListener("keydown",e=>{
+    if(gameOver||!game.classList.contains("active"))return
+    if(e.key==="ArrowLeft")x-=30
+    if(e.key==="ArrowRight")x+=30
+    x=Math.max(0,Math.min(innerWidth-40,x))
+    rocket.style.left=x+"px"
+})
 
-/* ROCHERS */
+/* MOBILE */
+const leftBtn=document.getElementById("leftBtn")
+const rightBtn=document.getElementById("rightBtn")
+function move(dx){
+    if(gameOver)return
+    x+=dx
+    x=Math.max(0,Math.min(innerWidth-40,x))
+    rocket.style.left=x+"px"
+}
+leftBtn.addEventListener("touchstart",e=>{e.preventDefault();move(-30)})
+rightBtn.addEventListener("touchstart",e=>{e.preventDefault();move(30)})
+leftBtn.addEventListener("mousedown",()=>move(-30))
+rightBtn.addEventListener("mousedown",()=>move(30))
+
 function spawnRock(){
     if(gameOver)return
     let r=document.createElement("div")
@@ -255,10 +299,11 @@ function spawnRock(){
     game.appendChild(r)
 
     let fall=setInterval(()=>{
-        if(gameOver){clearInterval(fall);return}
+        if(gameOver){r.remove();clearInterval(fall);return}
         r.style.top=parseInt(r.style.top)+speed+"px"
-        let a=r.getBoundingClientRect(),b=rocket.getBoundingClientRect()
-        if(a.bottom>b.top&&a.top<b.bottom&&a.left<b.right&&a.right>b.left){
+        let a=r.getBoundingClientRect()
+        let b=rocket.getBoundingClientRect()
+        if(a.bottom>b.top && a.top<b.bottom && a.left<b.right && a.right>b.left){
             r.remove()
             clearInterval(fall)
             endGame()
@@ -273,45 +318,33 @@ function spawnRock(){
 
 function endGame(){
     gameOver=true
+    clearInterval(scoreInterval)
     finalScore.textContent="Score : "+score
     gameover.style.display="flex"
+    let best=localStorage.getItem("bestScore")||0
+    if(score>best)localStorage.setItem("bestScore",score)
+    updateBest()
+}
+
+function showLeaderboard(){
+    list.innerHTML=""
     let data=JSON.parse(localStorage.getItem("leaderboard")||"[]")
-    data.push({name:player,score})
-    data.sort((a,b)=>b.score-a.score)
-    localStorage.setItem("leaderboard",JSON.stringify(data.slice(0,10)))
+    for(let i=0;i<10;i++){
+        let d=document.createElement("div")
+        if(data[i]){
+            let cls=i==0?"gold":i==1?"silver":i==2?"bronze":"normal"
+            d.className="item "+cls
+            d.innerHTML=`<span>#${i+1} ${data[i].name}</span><span>${data[i].score}</span>`
+        }else{
+            d.className="item empty"
+            d.innerHTML=`<span>#${i+1} — Libre</span><span>—</span>`
+        }
+        list.appendChild(d)
+    }
+    switchScreen(leader)
 }
 
 function goHome(){switchScreen(home)}
-
-/* CONTROLES PC + MOBILE */
-let movingLeft=false,movingRight=false
-const leftBtn=document.getElementById("leftBtn")
-const rightBtn=document.getElementById("rightBtn")
-
-leftBtn.addEventListener("touchstart",e=>{e.preventDefault();movingLeft=true},{passive:false})
-leftBtn.addEventListener("touchend",e=>{e.preventDefault();movingLeft=false},{passive:false})
-rightBtn.addEventListener("touchstart",e=>{e.preventDefault();movingRight=true},{passive:false})
-rightBtn.addEventListener("touchend",e=>{e.preventDefault();movingRight=false},{passive:false})
-
-document.addEventListener("keydown",e=>{
-    if(e.key==="ArrowLeft")movingLeft=true
-    if(e.key==="ArrowRight")movingRight=true
-})
-document.addEventListener("keyup",e=>{
-    if(e.key==="ArrowLeft")movingLeft=false
-    if(e.key==="ArrowRight")movingRight=false
-})
-
-function moveLoop(){
-    if(!gameOver&&game.classList.contains("active")){
-        if(movingLeft)x-=8
-        if(movingRight)x+=8
-        x=Math.max(0,Math.min(innerWidth-40,x))
-        rocket.style.left=x+"px"
-    }
-    requestAnimationFrame(moveLoop)
-}
-moveLoop()
 </script>
 
 </body>
